--- a/intent_parameter/app/src/main/AndroidManifest.xml
+++ b/intent_parameter/app/src/main/AndroidManifest.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.cheruixi.activity">
+    package="com.example.cheruixi.intent_parameter">
 
     <application
-        android:name="com.example.cheruixi.application.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,10 +16,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ResultActivity" />
-        <activity android:name=".BundleTransfer" />
-        <activity android:name=".ApplicationTransfer" />
-        <activity android:name=".ResultCallBackActivity"  android:launchMode="singleTask"></activity>
+        <activity android:name=".HiddenStart">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT"></category>
+                <action android:name="jesseAction"></action>
+                <category android:name="jesseCategory"></category>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
