--- a/LoadDemo/build.gradle
+++ b/LoadDemo/build.gradle
@@ -1,10 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
     repositories {
-        google()
-        jcenter()
+        repositories {
+            maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
@@ -17,8 +18,9 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        jcenter()
+        repositories {
+            maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        }
     }
 }
 
