--- a/LoadDemo/gradle.properties
+++ b/LoadDemo/gradle.properties
@@ -13,6 +13,7 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Mon Feb 12 13:44:31 CST 2018
-systemProp.http.proxyHost=web-proxy.jp.hpecorp.net
+#systemProp.http.proxyHost=web-proxy.jp.hpecorp.net
+#systemProp.http.proxyPort=8080
 org.gradle.jvmargs=-Xmx1536m
-systemProp.http.proxyPort=8080
+
