--- a/ListView/gradle.properties
+++ b/ListView/gradle.properties
@@ -13,6 +13,6 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Thu Feb 01 09:58:08 CST 2018
-systemProp.http.proxyHost=web-proxy.jp.hpecorp.net
+#systemProp.http.proxyHost=web-proxy.jp.hpecorp.net
 org.gradle.jvmargs=-Xmx1536m
-systemProp.http.proxyPort=8080
+#systemProp.http.proxyPort=8080
